# AcmeLogistics

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  docker-compose.yml  fly.toml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: config.py  deps.py  logging_security.py  main.py  models.py
api/app/routers/: calls.py  calls_active.py  carriers.py  dashboard.py  events.py  health.py  loads.py  telemetry.py  transcript_timeline.py
api/app/services/: bookings_store.py  calls_store.py  dashboard_aggregations.py  event_bus.py  load_store.py  token_counting.py  transcript_aggregations.py  transcript_parser.py  twin_client.py
api/tests/: conftest.py  test_auth.py  test_bookings_store.py  test_carriers_endpoints.py  test_dashboard_endpoints.py  test_fmcsa_eligibility.py  test_security.py  test_transcript_aggregations.py  test_twin_client.py
dashboard/: .env.example  Dockerfile  README.md  fly.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/src/: middleware.ts
dashboard/src/app/: error.tsx  globals.css  layout.tsx
dashboard/src/components/: active-calls-indicator.tsx  calls-table.tsx  (+13 more)
data/: twin_schema_bookings.sql  twin_schema_calls_log.sql  twin_schema_loads.sql  twin_schema_loads_status.sql  twin_seed_loads_v2.sql
data/migrations/: 2026_05_03_tighten_schema.sql
docs/: FDE-TECHNICAL-CHALLENGE.md  broker-doc.md  build_description.md  hr-component-snapshot.md
scripts/: apply-twin.py  deploy-api.ps1  deploy-api.sh  deploy-dashboard.ps1  deploy-dashboard.sh  generate_signed_link.py
(+76 files in other folders)
